--- a/index.html
+++ b/index.html
@@ -1,13 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project MM</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tic Tac Toe</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f0f0f0;
+    }
+
+    .game-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .game-board {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 10px;
+    }
+
+    .cell {
+      width: 80px;
+      height: 80px;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 40px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    #reset-btn {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #4CAF50;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    .game-mode-selector {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .game-mode-selector button {
+      width: 200px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #4CAF50;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
+  <div class="game-container">
     <h1>Tic Tac Toe</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Tic_tac_toe.svg/300px-Tic_tac_toe.svg.png" alt="">
-    <p>Hello Fucking Assholes, I creating a history.</p>    
+    <div class="game-mode-selector">
+      <button id="single-player-btn">1 Player</button>
+      <button id="two-player-btn">2 Players</button>
+    </div>
+    <div class="game-board">
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+    </div>
+    <div class="controls">
+      <button id="reset-btn">Reset</button>
+    </div>
+  </div>
+
+  <script>
+    const cells = document.querySelectorAll('.cell');
+    const singlePlayerBtn = document.getElementById('single-player-btn');
+    const twoPlayerBtn = document.getElementById('two-player-btn');
+    const resetBtn = document.getElementById('reset-btn');
+    let currentPlayer = 'X';
+    let gameMode = null;
+    let gameBoard = Array(9).fill(null);
+
+    function checkWinner() {
+      const winningPatterns = [
+        [0, 1, 2], [3, 4, 5], [6, 7, 8], // Rows
+        [0, 3, 6], [1, 4, 7], [2, 5, 8], // Columns
+        [0, 4, 8], [2, 4, 6] // Diagonals
+      ];
+
+      for (let pattern of winningPatterns) {
+        const [a, b, c] = pattern;
+        if (gameBoard[a] && gameBoard[a] === gameBoard[b] && gameBoard[a] === gameBoard[c]) {
+          return gameBoard[a];
+        }
+      }
+
+      if (gameBoard.every(cell => cell !== null)) {
+        return 'draw';
+      }
+
+      return null;
+    }
+
+    function handleCellClick(index) {
+      if (gameMode && gameBoard[index] === null) {
+        gameBoard[index] = currentPlayer;
+        cells[index].textContent = currentPlayer;
+        const winner = checkWinner();
+        if (winner) {
+          alert(`Player ${winner} wins!`);
+          resetGame();
+        } else {
+          currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
+        }
+      }
+    }
+
+    function resetGame() {
+      gameBoard = Array(9).fill(null);
+      cells.forEach(cell => cell.textContent = '');
+      currentPlayer = 'X';
+      gameMode = null;
+      document.querySelector('.game-mode-selector').style.display = 'flex';
+      document.querySelector('.game-board').style.display = 'none';
+    }
+
+    singlePlayerBtn.addEventListener('click', () => {
+      gameMode = 'single';
+      document.querySelector('.game-mode-selector').style.display = 'none';
+      document.querySelector('.game-board').style.display = 'grid';
+    });
+
+    twoPlayerBtn.addEventListener('click', () => {
+      gameMode = 'two-player';
+      document.querySelector('.game-mode-selector').style.display = 'none';
+      document.querySelector('.game-board').style.display = 'grid';
+    });
+
+    cells.forEach((cell, index) => {
+      cell.addEventListener('click', () => handleCellClick(index));
+    });
+
+    resetBtn.addEventListener('click', resetGame);
+  </script>
 </body>
 </html>
